# pyfastani

./: .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  COPYING  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: package.yml  requirements.txt  test.yml
benches/data/: download.py
benches/mapping/: bench.py  plot.py  requirements.txt  v0.4.0.json  v0.6.0.json
docs/: conf.py  index.rst  install.rst  requirements.txt
docs/_static/json/: switcher.json
docs/api/: ani.rst  index.rst  minimizer.rst  misc.rst
docs/guide/: copyright.rst  index.rst
include/fastani/cgi/: cgid_types.pxd  compute_core_identity.pxd
include/fastani/map/: base_types.pxd  common_func.pxd  compute_map.pxd  map_parameters.pxd  map_stats.pxd  win_sketch.pxd
include/kseq/: __init__.pxd
include/libcpp11/: chrono.pxd  fstream.pxd  iostream.pxd  istream.pxd  ostream.pxd
pkg/aur/: PKGBUILD.in
pyfastani/: __init__.py  _atomic_vector.pxd  _fasta.pyx  _fastani.pyi  _fastani.pyx  _patch.pxi  _simd.c  _simd.h  _simd.pxd  _unicode.pxd  _utils.cpp  _utils.hpp  _utils.pxd  omp.cpp  omp.h
pyfastani/_sequtils/: __init__.pxd  sequtils.c  sequtils.cpp  sequtils.h  sse2.c  ssse3.c
pyfastani/tests/: __init__.py  requirements.txt  test_ani.py  test_hasher.py  test_mapper.py  test_sketch.py
pyfastani/tests/data/: BGC0001425.faa  BGC0001427.faa  BGC0001428.faa
src/: CMakeLists.txt
src/FastANI/: CMakeLists.txt  omp.cpp  omp.h
src/pyfastani/: CMakeLists.txt  __init__.py  _atomic_vector.hpp  _fasta.pyx  _fastani.pyx  _patch.pxi  _utils.cpp  omp.h
src/pyfastani/_sequtils/: CMakeLists.txt  complement.h  neon.c  sequtils.cpp  sequtils.h  sse2.c  ssse3.c
src/pyfastani/tests/: __init__.py  requirements.txt  test_ani.py
src/pyfastani/tests/data/: Escherichia_coli_str_K12_MG1655.fna  Shigella_flexneri_2a_01.fna
src/scripts/: patch_header.py
src/scripts/cmake/: CythonExtension.cmake  FindSSSE3.cmake
tests/: test_mapper.py
