# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c

# --- Setuptools metadata ---------------------------------------------------

[metadata]
name = pyfastani
version = attr: pyfastani.__version__
author = Martin Larralde
author_email = martin.larralde@embl.de
url = https://github.com/althonos/pyFastANI
description = Cython bindings and Python interface to FastANI, a method for fast whole-genome similarity estimation.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platform = posix
keywords = bioinformatics, genomics, average, nucleotide, identity
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: C++
    Programming Language :: Cython
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Typing :: Typed
project_urls =
    Bug Tracker = https://github.com/althonos/pyfastani/issues
    Changelog = https://github.com/althonos/pyfastani/blob/master/CHANGELOG.md
    Coverage = https://codecov.io/gh/althonos/pyfastani/
    Builds = https://github.com/althonos/pyfastani/actions/
    PyPI = https://pypi.org/project/pyfastani
    Zenodo = https://doi.org/10.5281/zenodo.4940237

[options]
zip_safe = false
packages = pyfastani, pyfastani.tests, pyfastani.tests.data
python_requires = >=3.6
test_suite = pyfastani.tests
include_package_data = true
setup_requires =
    setuptools >=46.4
    cython ~=3.0

[options.package_data]
pyfastani = py.typed, *.pyi
pyfastani.tests = requirements.txt

[publicize_headers]
sources = vendor/FastANI/src

# --- Python tools configuration --------------------------------------------

[coverage:run]
plugins = Cython.Coverage

[coverage:report]
include = pyfastani/*.pyx
omit = pyfastani/tests/*
show_missing = true
exclude_lines =
    pragma: no cover
    if typing.TYPE_CHECKING:
    @abc.abstractmethod
    @abc.abstractproperty
    raise NotImplementedError
    return NotImplemented
    raise UnexpectedError
    raise AllocationError

[mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
